Dialog: Fix not aligned Toolbar buttons on Dialog header (#5497)

--- a/src/MudBlazor/Styles/components/_dialog.scss
+++ b/src/MudBlazor/Styles/components/_dialog.scss
@@ -92,6 +92,12 @@
             right: 8px;
             position: absolute;
         }
+
+        & .mud-toolbar {
+            & .mud-button-root {
+                position: relative;
+            }
+        }
     }
 
     & .mud-dialog-content {
